--- a/app/src/main/res/layout/row_bank_account_list_item.xml
+++ b/app/src/main/res/layout/row_bank_account_list_item.xml
@@ -24,7 +24,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
@@ -136,6 +135,63 @@
             app:layout_constraintTop_toBottomOf="@+id/tvIFSCCodeLabel"
             tools:text="ICIC00000457" />
 
+        <TextView
+            android:id="@+id/tvLblStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="8dp"
+            android:minHeight="@dimen/_20sdp"
+            android:text="@string/status_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvInfo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mDivider2"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="8dp"
+            android:minHeight="@dimen/_20sdp"
+            android:paddingLeft="@dimen/space_2"
+            android:text="@{widget.docStatus}"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@{widget.docStatus.equals(`Verified`) ? @color/colorAccent : @color/red}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnUploadSanned"
+            app:layout_constraintStart_toEndOf="@+id/tvLblStatus"
+            app:layout_constraintTop_toTopOf="@id/mDivider2"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <TextView
+            android:id="@+id/btnUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_1"
+            android:background="@drawable/shape_btn_primary"
+            android:drawableStart="@drawable/ic_mandate_upload"
+            android:drawablePadding="@dimen/space_8"
+            android:fontFamily="@font/lato_bold"
+            android:gravity="center"
+            android:paddingStart="@dimen/space_16"
+            android:paddingTop="@dimen/space_8"
+            android:paddingEnd="@dimen/space_16"
+            android:paddingBottom="@dimen/space_8"
+            android:text="@{widget.updateButtonlabel}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            android:visibility="@{widget.isUpdateVisivibility()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mDivider2" />
+
         <View
             android:id="@+id/mDivider"
             android:layout_width="match_parent"
@@ -143,6 +199,15 @@
             android:layout_marginTop="@dimen/space_8"
             android:background="@color/darker_gray"
             app:layout_constraintTop_toBottomOf="@+id/ivBank" />
+
+
+        <View
+            android:id="@+id/mDivider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:background="@color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@+id/tvBreachName" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
@@ -155,6 +220,8 @@
     </android.support.constraint.ConstraintLayout>
 
     <data>
+
+        <import type="android.view.View" />
 
         <variable
             name="setDefault"
