--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -3,13 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="vm"
-            type="com.tarrakki.module.bankaccount.AddBankAccountVM" />
-    </data>
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,12 +16,91 @@
             android:elevation="@dimen/space_2"
             android:padding="@dimen/space_8">
 
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginBottom="@dimen/space_8"
+                android:background="@drawable/shape_btn_idle_bg"
+                android:fontFamily="@font/lato_bold"
+                android:text="@{vm.labelButton}"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvAccountType" />
+
+            <EditText
+                android:id="@+id/edtAccountNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_4"
+                android:background="@drawable/shape_edt_gray_round"
+                android:hint="@string/enter_account_number"
+                android:inputType="numberPassword"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.accountNo}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvAccountNo" />
+
+            <EditText
+                android:id="@+id/edtReAccountNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_4"
+                android:background="@drawable/shape_edt_gray_round"
+                android:hint="@string/re_enter_account_number"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.reenterAccountNo}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvReAccountNo" />
+
+            <EditText
+                android:id="@+id/edtLName"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="@dimen/space_4"
+                android:layout_marginTop="@dimen/space_4"
+                android:background="@drawable/shape_edt_gray_round"
+                android:hint="@string/enter_ifsc_code"
+                android:inputType="textCapCharacters"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.IFSCCode}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/tvAccountType"
+                app:layout_constraintTop_toBottomOf="@id/tvAccountTypeL" />
+
             <TextView
                 android:id="@+id/tvAddl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato_semibold"
-                android:text="@string/add_new_bank_account"
+                android:text="@{vm.labelButton}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,70 +141,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvName" />
 
-            <TextView
-                android:id="@+id/tvAccountNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:text="@string/account_number_"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edtName" />
-
-            <EditText
-                android:id="@+id/edtAccountNo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_4"
-                android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/enter_account_number"
-                android:inputType="numberPassword"
-                android:maxLines="1"
-                android:paddingStart="@dimen/default_space"
-                android:paddingTop="@dimen/space_8"
-                android:paddingEnd="@dimen/default_space"
-                android:paddingBottom="@dimen/space_8"
-                android:text="@={vm.accountNo}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
-                android:textColorHint="@color/darker_gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvAccountNo" />
-
-            <TextView
-                android:id="@+id/tvReAccountNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:text="@string/re_enter_account_number_"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edtAccountNo" />
-
-            <EditText
-                android:id="@+id/edtReAccountNo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_4"
-                android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/re_enter_account_number"
-                android:inputType="number"
-                android:maxLines="1"
-                android:paddingStart="@dimen/default_space"
-                android:paddingTop="@dimen/space_8"
-                android:paddingEnd="@dimen/default_space"
-                android:paddingBottom="@dimen/space_8"
-                android:text="@={vm.reenterAccountNo}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
-                android:textColorHint="@color/darker_gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvReAccountNo" />
-
 
             <!-- <TextView
                  android:id="@+id/tvBreach"
@@ -169,6 +177,28 @@
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvBreach" />-->
 
+
+            <TextView
+                android:id="@+id/tvAccountNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:text="@string/account_number_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtName" />
+
+            <TextView
+                android:id="@+id/tvReAccountNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:text="@string/re_enter_account_number_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtAccountNo" />
 
             <TextView
                 android:id="@+id/tvAccountTypeL"
@@ -222,44 +252,14 @@
                 app:layout_constraintStart_toEndOf="@id/tvAccountTypeL"
                 app:layout_constraintTop_toBottomOf="@id/edtReAccountNo" />
 
-            <EditText
-                android:id="@+id/edtLName"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="@dimen/space_4"
-                android:layout_marginTop="@dimen/space_4"
-                android:background="@drawable/shape_edt_gray_round"
-                android:hint="@string/enter_ifsc_code"
-                android:inputType="textCapCharacters"
-                android:maxLength="11"
-                android:maxLines="1"
-                android:paddingStart="@dimen/default_space"
-                android:paddingTop="@dimen/space_8"
-                android:paddingEnd="@dimen/default_space"
-                android:paddingBottom="@dimen/space_8"
-                android:text="@={vm.IFSCCode}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
-                android:textColorHint="@color/darker_gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toEndOf="@id/tvAccountType"
-                app:layout_constraintTop_toBottomOf="@id/tvAccountTypeL" />
-
-            <Button
-                android:id="@+id/btnAdd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:layout_marginBottom="@dimen/space_8"
-                android:background="@drawable/shape_btn_idle_bg"
-                android:fontFamily="@font/lato_bold"
-                android:text="@string/add_bank_account"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvAccountType" />
-
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
+    <data>
+
+        <variable
+            name="vm"
+            type="com.tarrakki.module.bankaccount.AddBankAccountVM" />
+    </data>
 </layout>
