--- a/app/src/main/res/layout/row_bank_account_list_item.xml
+++ b/app/src/main/res/layout/row_bank_account_list_item.xml
@@ -164,7 +164,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@{widget.docStatus.equals(`Verified`) ? @color/colorAccent : @color/red}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnUploadSanned"
             app:layout_constraintStart_toEndOf="@+id/tvLblStatus"
             app:layout_constraintTop_toTopOf="@id/mDivider2"
             app:layout_constraintVertical_bias="0.5" />
@@ -188,7 +187,7 @@
             android:text="@{widget.updateButtonlabel}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
-            android:visibility="@{widget.isUpdateVisivibility()}"
+            android:visibility="@{widget.isUpdateVisivibility}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/mDivider2" />
