1 Implemented email verification screen 2 Fixed crash issue.

--- a/app/src/main/res/layout/row_amc_list_item.xml
+++ b/app/src/main/res/layout/row_amc_list_item.xml
@@ -63,7 +63,7 @@
             android:maxLines="2"
             android:minLines="2"
             android:text="@{vm.fscbiCategoryName}"
-            android:textColor="@{context.getColor(vm.fundColor)}"
+            android:textColor="@{vm.fundColor}"
             app:layout_constraintEnd_toEndOf="@+id/tvName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvWeightage"
