--- a/app/src/main/res/layout/row_bank_mandate_list_item.xml
+++ b/app/src/main/res/layout/row_bank_mandate_list_item.xml
@@ -293,14 +293,13 @@
             android:paddingEnd="@dimen/space_16"
             android:paddingBottom="@dimen/space_8"
             android:text="@{widget.btnUploadTxt}"
+            android:visibility="@{widget.btnUploadVisibility}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
-            android:visibility="@{widget.btnUploadVisibility}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/mDivider2"
-            tools:text="@string/complete_nach_mandate"
-            tools:visibility="@{widget.isMandateUpload==false?View.VISIBLE:View.GONE}" />
+            tools:text="@string/complete_nach_mandate" />
 
     </android.support.constraint.ConstraintLayout>
 
