1 Added warning message while fund has been block by AMC. 2 Redirected to fund details screen from portfolio screen. 3 Extra decimal point added for Exit Load details.

--- a/app/src/main/res/layout/row_direct_investment_list_item.xml
+++ b/app/src/main/res/layout/row_direct_investment_list_item.xml
@@ -33,6 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:redirectToFundDetails="@{investment.fundId}"
             tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
