--- a/app/src/main/res/layout/dialog_invest.xml
+++ b/app/src/main/res/layout/dialog_invest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -68,7 +69,7 @@
             android:layout_marginTop="@dimen/space_4"
             android:background="@drawable/shape_edt_enable_disable_bg"
             android:enabled="@{enableLumpsum}"
-            android:hint="@string/enter_one_time_lumpsum_amount"
+            android:hint="@{enableLumpsum?@string/enter_one_time_lumpsum_amount:@string/temp_restricted_by_amc}"
             android:inputType="number"
             android:maxLines="1"
             android:nextFocusForward="@+id/edtSIPAmount"
@@ -82,7 +83,8 @@
             android:textColorHint="@color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLumpsum" />
+            app:layout_constraintTop_toBottomOf="@id/tvLumpsum"
+            tools:hint="@string/enter_one_time_lumpsum_amount" />
 
         <TextView
             android:id="@+id/tvRSLumpsum"
@@ -113,7 +115,7 @@
             android:layout_marginTop="@dimen/space_4"
             android:background="@drawable/shape_edt_enable_disable_bg"
             android:enabled="@{enableSIP}"
-            android:hint="@string/enter_sip_amount"
+            android:hint="@{enableSIP?@string/enter_sip_amount:@string/temp_restricted_by_amc}"
             android:imeOptions="actionDone"
             android:inputType="number"
             android:maxLines="1"
@@ -127,7 +129,8 @@
             android:textColorHint="@color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL" />
+            app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL"
+            tools:hint="@string/enter_sip_amount" />
 
         <TextView
             android:id="@+id/tvRSSIPAmount"
