--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -26,6 +26,7 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
+            app:redirectToFundDetails="@{investment.fundId}"
             android:text="@{investment.fundName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
