--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_32sdp"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_login"
+                tools:src="@drawable/ic_login"
+                android:src="@{vm.tarrakki?@drawable/ic_login:@drawable/logo_rural}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
