--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -54,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_50"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_login"
+            tools:src="@drawable/ic_login"
+            android:src="@{vm.tarrakki?@drawable/ic_login:@drawable/logo_rural}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
