--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,10 +27,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_50"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_login"
+                android:src="@{vm.tarrakki?@drawable/ic_login:@drawable/logo_rural}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_login" />
 
             <TextView
                 android:id="@+id/tvLoginLbl"
@@ -133,6 +134,28 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/edtPassword" />
 
+            <EditText
+                android:id="@+id/edtPromocode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_32"
+                android:background="@drawable/shape_edt_white_round"
+                android:hint="@string/promo_code"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.promocode}"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />
+
             <CheckBox
                 android:id="@+id/cbTermsConditions"
                 android:layout_width="wrap_content"
@@ -145,8 +168,8 @@
                 android:padding="@dimen/space_8"
                 android:text="@string/i_agree_with_terms_and_conditions"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/edtConfirmPassword"
-                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />
+                app:layout_constraintStart_toStartOf="@+id/edtPromocode"
+                app:layout_constraintTop_toBottomOf="@id/edtPromocode" />
 
             <Button
                 android:id="@+id/btnSignUp"
