--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,15 +25,16 @@
             android:layout_marginBottom="@dimen/default_space"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivReadyToInvest"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvDocStatus"
+                enableNestedScrollView="@{false}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginBottom="@dimen/default_space"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_pending_doc_verification" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/row_ready_to_invest" />
 
             <LinearLayout
                 android:id="@+id/ll_complete_verification"
