--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -45,7 +45,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view2"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="@string/full_name" />
 
                 <EditText
